# gpx_analyze

./: Afternoon_Swimrun.gpx  Cargo.toml  test-727.gpx  test.gpx  track.gpx
src/: gpxfile.rs  gpxfiles.rs  gpxsource.rs  lib.rs  main.rs  segments.rs
